--- a/jsexsercise.html
+++ b/jsexsercise.html
@@ -613,14 +613,14 @@
     <div class='header'>
         <ul id='head'>
             <li>
-                <a href="banner.html">
+                <a href="index.html">
                     <p style="font-size:48px;">Cecilia</p>
                 </a>
             </li>
-            <li><a href="javascript:">JS练习</a></li>
+            <li><a href="jsexsercise.html">JS练习</a></li>
             <!-- <li><a href="javascript:">设计作品</a></li> -->
             <li><a href="project1.html">课程项目</a></li>
-            <li><a href="banner.html">关于我</a></li>
+            <li><a href="index.html">关于我</a></li>
         </ul>
     </div>
     <div id="smallheader">
@@ -631,7 +631,7 @@
             <img src='image/close.png'>
         </div>
         <div class='portrait'>
-            <a href="banner.html"><img src="image/port.jpg"></a>
+            <a href="index.html"><img src="image/port.jpg"></a>
         </div>
         <div class='contact'>
             <a href="javascript:"><img src="image/contact.png"></a>
@@ -643,10 +643,10 @@
 
     <div id='smallNav'>
         <ul>
-            <li><a href="javascript:">JS练习</a></li>
+            <li><a href="jsexsercise.html">JS练习</a></li>
             <!-- <li><a href="javascript:">设计作品</a></li> -->
             <li><a href="project1.html">课程项目</a></li>
-            <li><a href="banner.html">关于我</a></li>
+            <li><a href="index.html">关于我</a></li>
         </ul>
     </div>
     <div id='project'>
