--- a/project3.html
+++ b/project3.html
@@ -261,14 +261,14 @@
     <div class='header'>
         <ul id='head'>
             <li>
-                <a href="javascript:">
+                <a href="index.html">
                     <p style="font-size:48px;">Cecilia</p>
                 </a>
             </li>
             <li><a href="jsexsercise.html">JS练习</a></li>
             <!-- <li><a href="javascript:">设计作品</a></li> -->
             <li><a href="project1.html">课程项目</a></li>
-            <li><a href="javascript:">关于我</a></li>
+            <li><a href="index.html">关于我</a></li>
         </ul>
     </div>
     <div id="smallheader">
@@ -278,7 +278,9 @@
         <div class='close'>
             <img src='image/close.png'>
         </div>
-        <div class='portrait'><img src="image/port.jpg"></div>
+        <div class='portrait'>
+            <a href="index.html"><img src="image/port.jpg"></a>
+        </div>
         <div class='contact'>
             <a href="javascript:"><img src="image/contact.png"></a>
         </div>
@@ -292,7 +294,7 @@
             <li><a href="jsexsercise.html">JS练习</a></li>
             <!-- <li><a href="javascript:">设计作品</a></li> -->
             <li><a href="project1.html">课程项目</a></li>
-            <li><a href="javascript:">关于我</a></li>
+            <li><a href="index.html">关于我</a></li>
         </ul>
     </div>
     <div id='project'>
